# VelyraUtils

./: .gitmodules  CMakeLists.txt  README.md  run_coverage.sh
.github/workflows/: main.yml
include/VelyraUtils/: Concepts.hpp  CpuFeatures.hpp  ExportUtils.hpp  Logging.hpp  LoggingFwd.hpp  Math.hpp  PlatformDetection.hpp  TypeTraits.hpp  VelyraEnum.hpp  VelyraUtils.hpp
include/VelyraUtils/Clock/: Clock.hpp
include/VelyraUtils/Conversions/: Json.hpp  String.hpp
include/VelyraUtils/DevUtils/: CartesianProduct.hpp  Conditions.hpp  JsonSerializer.hpp  MacroExpansion.hpp  PrettyTypeFormatter.hpp  PrivateMemberGetter.hpp
include/VelyraUtils/Memory/: View.hpp
include/VelyraUtils/Threading/: ThreadPool.hpp  Worker.hpp
include/VelyraUtils/Types/: Color.hpp  KeyVector.hpp  SymbolicTypes.hpp  Types.hpp
src/: CpuFeatures.cpp  Logging.cpp  VelyraUtils.cpp
src/DevUtils/: PrettyTypeFormatter.cpp
src/Threading/: ThreadPool.cpp  Worker.cpp
src/Types/: Color.cpp  SymbolicTypes.cpp
test/: TestConcepts.cpp  TestLogging.cpp  TestMath.cpp  TestTypeTraits.cpp  TestVelyraEnum.cpp  TestvelyraUtils.cpp  Utils.hpp
test/Conversions/: TestFromJson.cpp  TestFromString.cpp  TestToJson.cpp  TestToString.cpp
test/DevUtils/: TestCartesianProduct.cpp  TestConditions.cpp  TestJsonSerializer.cpp
test/Memory/: TestView.cpp
test/Threading/: TestThreading.cpp
test/Types/: TestKeyVector.cpp  TestSymbolicTypes.cpp
